feat: SCSS 스타일 정의

--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" >
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="경호, 해영 모바일 청첩장"/>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- <link href="https://hangeul.pstatic.net/hangeul_static/css/NanumDdarEGeEomMaGa.css" rel="stylesheet"> -->
     <!-- <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&amp;display=swap" rel="stylesheet"> -->
     <link href="https://hangeul.pstatic.net/hangeul_static/css/maru-buri.css" rel="stylesheet">
-    <title>React App</title>
+    <title>경호 💍 해영 청첩장</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
