--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,21 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" >
+    <meta
+      name="viewport"
+      content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=no"
+    />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="경호, 해영 모바일 청첩장"/>
+    <meta name="description" content="경호, 해영 모바일 청첩장" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- <link href="https://hangeul.pstatic.net/hangeul_static/css/NanumDdarEGeEomMaGa.css" rel="stylesheet"> -->
     <!-- <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&amp;display=swap" rel="stylesheet"> -->
-    <link href="https://hangeul.pstatic.net/hangeul_static/css/maru-buri.css" rel="stylesheet">
+    <link
+      href="https://hangeul.pstatic.net/hangeul_static/css/maru-buri.css"
+      rel="stylesheet"
+    />
     <title>경호 💍 해영 청첩장</title>
   </head>
   <body>
