--- a/public/index.html
+++ b/public/index.html
@@ -3,21 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
     <meta
       name="viewport"
-      content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=no"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="경호, 해영 모바일 청첩장" />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!-- <link href="https://hangeul.pstatic.net/hangeul_static/css/NanumDdarEGeEomMaGa.css" rel="stylesheet"> -->
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&amp;display=swap" rel="stylesheet"> -->
+    <meta name="author" content="minhoo" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="경호,해영 모바일 청첩장" />
     <link
-      href="https://hangeul.pstatic.net/hangeul_static/css/maru-buri.css"
-      rel="stylesheet"
+      rel="apple-touch-icon"
+      sizes="192x192"
+      href="%PUBLIC_URL%/favicon-192x192.png"
     />
+    <link rel="icon" sizes="192x192" href="%PUBLIC_URL%/favicon-192x192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>경호 💍 해영 청첩장</title>
   </head>
   <body>
