feat: index.html, manifest.json 수정

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html lang="ko">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
 
     <meta
       name="viewport"
@@ -12,12 +11,8 @@
     <meta name="author" content="minhoo" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="경호,해영 모바일 청첩장" />
-    <link
-      rel="apple-touch-icon"
-      sizes="192x192"
-      href="%PUBLIC_URL%/favicon-192x192.png"
-    />
-    <link rel="icon" sizes="192x192" href="%PUBLIC_URL%/favicon-192x192.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="./favicon-192x192.png" />
+    <link rel="icon" sizes="192x192" href="./favicon-192x192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>경호 💍 해영 청첩장</title>
   </head>
