feat: LCP 이미지 preload 및 Navigation 컴포넌트 lazy 적용

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,21 @@
     <meta name="author" content="minhoo" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="경호,해영 모바일 청첩장" />
+    <!-- 메인 이미지 preload -->
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dgl08y6j1/image/upload/w_800/v1719937037/webp/weddingHero1.webp"
+      type="image/webp"
+    />
+
+    <!-- 서브 이미지 preload -->
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dgl08y6j1/image/upload/w_300/v1719937037/webp/weddingText.webp"
+      type="image/webp"
+    />
     <link rel="apple-touch-icon" sizes="192x192" href="./favicon-192x192.png" />
     <link rel="icon" sizes="192x192" href="./favicon-192x192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
